<resources>
    <string name="app_name">Handicrafts</string>
    <string name="logo_desc">HandMade Haven Logo</string>

    <string name="api_key_razorpay">rzp_test_Nqy8gmPWtyPySL</string>

    <string name="arunachal"><u>
        Arunachal Handicrafts
    </u>
    </string>

    <string name="address">
        <b>Pick Address On Map</b>

    </string>
    <string name="spinner_description">Select state</string>

    <string name="sign_up">Sign up</string>
    <string name="log_in">Login</string>
    <string name="doesn_t_have_an_account">Doesn\'t have an Account?</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="or_sign_up_with_social_account">Or sign up with Social account</string>
    <string name="btn_login">Login</string>
    <string name="SignUp_about_me">About me</string>
    <string name="SignUp_city">City</string>
    <string name="SignUp_pindcode">Pincode</string>
    <string name="api">AIzaSyCX9OMG7iua9i8PCcGB9OlladtWs5heTZY</string>
    <string name="SignUp_add_image">Add Image</string>

    <string name="product_img_desc">Product Image</string>
    <string name="remove_from_list">remove from list</string>

    <string name="add_to_cart">Add to Cart</string>
    <string name="delivery_stmt">FREE delivery is available</string>

    <string name="no_ratings">No ratings yet</string>

</resources>