<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginPage">

    <ImageView
        android:id="@+id/img_backtoHome"
        android:src="@drawable/ic_arrowback_ios_new_24"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/txt_signup"
        android:layout_width="127dp"
        android:layout_height="34dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/log_in"
        android:textStyle="bold"
        android:textSize="24sp"

        app:layout_constraintTop_toBottomOf="@id/img_backtoHome"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/edt_email"
        android:layout_width="343dp"
        android:layout_height="64dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:hint="Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_signup"
        android:background="@color/white">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/edt_password"
        android:layout_width="343dp"
        android:layout_height="64dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="6dp"
        android:hint="Password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        android:background="@color/white">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@+id/alreadyIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@id/edt_password"

        >
        <TextView
            android:layout_width="176dp"
            android:layout_height="20dp"
            android:text="@string/doesn_t_have_an_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_password"
            />
        <ImageView
            android:id="@+id/img_gotoSignUp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="25dp"
            android:src="@drawable/ic_arrowright_alt_24"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="343dp"
        android:layout_height="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/btn_login"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/alreadyIn"
        android:backgroundTint="@color/orange_btnColor"/>

    <TextView
        android:id="@+id/extra_sign_option"
        android:text="@string/or_sign_up_with_social_account"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:gravity="center_horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/extra_sign_option"
        android:gravity="center"
        android:layout_marginTop="16dp"
        >
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/google_icon"
            android:layout_marginEnd="100dp"/>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/fackbook_logo"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>